#16 Added tests, docs and worked on Sonar issues